Fix overflowing text

--- a/client/src/components/Posts/Posts.module.css
+++ b/client/src/components/Posts/Posts.module.css
@@ -59,6 +59,7 @@
 .post-info__body div {
   display: -webkit-box;
   max-width: 100%;
+  max-height: 200px;
   -webkit-line-clamp: 6;
   -webkit-box-orient: vertical;
   overflow: hidden;
